force-app/main/default/objects/RP_Dealer__c/RP_Dealer__c.object-meta.xml
<CustomObject>
    <label>RP Dealer</label>
    <nameField>
        <label>RP Dealer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RP Dealers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>