force-app/main/default/objects/RP_Dealer__c/fields/External_Field__c.field-meta.xml
<CustomField>
    <fullName>External_Field__c</fullName>
    <externalId>true</externalId>
    <label>External Field</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>