force-app/main/default/objects/RP_Dealer__c/fields/MFC_CnB_City_Name__c.field-meta.xml
<CustomField>
    <fullName>MFC_CnB_City_Name__c</fullName>
    <label>MFC/CnB City Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>