force-app/main/default/objects/RP_Dealer__c/fields/Registration_City__c.field-meta.xml
<CustomField>
    <fullName>Registration_City__c</fullName>
    <label>Registration City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>