force-app/main/default/objects/RP_Dealer__c/fields/Rp_City__c.field-meta.xml
<CustomField>
    <fullName>Rp_City__c</fullName>
    <label>Rp_City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>