force-app/main/default/objects/RP_Dealer__c/fields/Rp_Code__c.field-meta.xml
<CustomField>
    <fullName>Rp_Code__c</fullName>
    <label>Rp_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>