force-app/main/default/objects/RP_Dealer__c/fields/RP_Email__c.field-meta.xml
<CustomField>
    <fullName>RP_Email__c</fullName>
    <label>RP_Email</label>
    <type>Email</type>
</CustomField>