force-app/main/default/objects/RP_Dealer__c/fields/Rp_Phone__c.field-meta.xml
<CustomField>
    <fullName>Rp_Phone__c</fullName>
    <label>Rp_Phone</label>
    <type>Phone</type>
</CustomField>