force-app/main/default/objects/RP_Dealer__c/fields/Rp_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Rp_Pincode__c</fullName>
    <label>Rp_Pincode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>