force-app/main/default/objects/RP_Dealer__c/fields/Rp_SellingEmail__c.field-meta.xml
<CustomField>
    <fullName>Rp_SellingEmail__c</fullName>
    <label>Rp_SellingEmail</label>
    <type>Email</type>
</CustomField>