force-app/main/default/objects/RP_Dealer__c/fields/Rp_State__c.field-meta.xml
<CustomField>
    <fullName>Rp_State__c</fullName>
    <label>Rp_State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>